--- a/django_pos/templates/pos/logout_modal.html
+++ b/django_pos/templates/pos/logout_modal.html
@@ -12,7 +12,7 @@ aria-hidden="true">
             </div>
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer"> 
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
                 <a class="btn btn-primary" href="{% url 'authentication:logout' %}">Logout</a>
             </div>
         </div>
