--- a/django_pos/templates/pos/sidebar.html
+++ b/django_pos/templates/pos/sidebar.html
@@ -28,12 +28,12 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
             aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-fw fa-tag"></i>
-            <span>Products</span>
+            <span>Produtos</span>
         </a>
         <div id="collapseTwo" class="{% if "products" in active_icon %} collapse show {% else %} collapse {% endif %}" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="{% if "categories" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:categories_list' %}">Categories</a>
-                <a class="{% if "products_products" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:products_list' %}">Products</a>
+                <a class="{% if "categories" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:categories_list' %}">Categorias</a>
+                <a class="{% if "products_products" in active_icon %} collapse-item active {% else %} collapse-item {% endif %}" href="{% url 'products:products_list' %}">Produtos</a>
             </div>
         </div>
     </li>
@@ -45,7 +45,7 @@
     <li class="{% if "customers" in active_icon %} nav-item active {% else %} nav-item {% endif %}">
         <a class="nav-link" href="{% url 'customers:customers_list' %}">
             <i class="fas fa-fw fa-users"></i>
-            <span>Customers</span></a>
+            <span>Clientes</span></a>
     </li>
 
     <!-- Divider -->
@@ -55,7 +55,7 @@
     <li class="{% if "sales" in active_icon %} nav-item active {% else %} nav-item {% endif %}">
         <a class="nav-link" href="{% url 'sales:sales_list' %}">
             <i class="fas fa-fw fa-cart-plus"></i>
-            <span>Sales</span></a>
+            <span>Vendas</span></a>
     </li>
 
     <!-- Divider -->
