--- a/django_pos/templates/products/categories_update.html
+++ b/django_pos/templates/products/categories_update.html
@@ -1,22 +1,22 @@
 {% extends "pos/base.html" %}
 
 <!-- Page title  -->
-{% block title %}Update category{% endblock title %}
+{% block title %}Atualizar categoria{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Update category{% endblock heading %}
+{% block heading %}Atualizar categoria{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
-<!--Go back-->
+<!--Voltar-->
 <div class="row ml-0 mb-3">
     <a href="{% url 'products:categories_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
-            Go back
+            Voltar
         </button>
     </a>
 </div>
@@ -29,12 +29,12 @@
                 <div class="form-row">
                     
                     <div class="form-group col-md-8">
-                        <label for="inputDescription">Name</label>
+                        <label for="inputDescription">Nome</label>
                         <input type="text" class="form-control" name="name" value="{{category.name}}" required>
                     </div>
                     
                     <div class="form-group col-md-4">
-                        <label for="state">State</label>
+                        <label for="state">Estado</label>
                         <select name="state" class="form-control" required>
                             {% for status in category_status %}
                                 {% if status.0 == category.status %}
@@ -49,12 +49,12 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="inputDescription">Description</label>
+                        <label for="inputDescription">Descrição</label>
                         <input type="text" name="description" class="form-control" value="{{category.description}}" required>
                     </div>
                 </div>
                
-                <button type="submit" class="btn btn-success font-weight-bold">Update category</button>
+                <button type="submit" class="btn btn-success font-weight-bold">Atualizar categoria</button>
                
             </form>
         </div>
