--- a/django_pos/templates/products/products.html
+++ b/django_pos/templates/products/products.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}Products{% endblock title %}
+{% block title %}Produtos{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -11,7 +11,7 @@
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Products{% endblock heading %}
+{% block heading %}Produtos{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
@@ -21,7 +21,7 @@
         <a href="{% url 'products:products_add' %}">
             <button type="button" class="btn btn-success font-weight-bold">
                     <i class="fas fa-plus mr-2"></i>
-                    Create new product
+                    Criar novo produto
             </button>
         </a>
     </div>
@@ -29,7 +29,7 @@
     <!-- DataTable -->
     <div class="card shadow mb-12">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Products</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Produtos</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -38,12 +38,12 @@
                         <tr>
                             <th>ID</th>
                             <th style="width:5%">#</th>
-                            <th style="width:20%">Name</th>
-                            <th style="width:25%">Description</th>
-                            <th style="width:15%">Category</th>
-                            <th class="text-center" style="width:15%">Price</th>
+                            <th style="width:20%">Nome</th>
+                            <th style="width:25%">Descrição</th>
+                            <th style="width:15%">Categoria</th>
+                            <th class="text-center" style="width:15%">Preço</th>
                             <th class="text-center" style="width:10%">Status</th>
-                            <th class="text-center" style="width:10%">Actions</th>
+                            <th class="text-center" style="width:10%">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -67,7 +67,7 @@
                             <td class="text-center">
                                 <!--Update-->
                                 <a href="{% url 'products:products_update' p.id %}" class="text-decoration-none">
-                                    <button  type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Update product">
+                                    <button  type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Atualizar produto">
                                         <i class="fas fa-pen"></i>
                                     </button>
                                 </a>
@@ -84,7 +84,7 @@
                                     <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Delete product</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Apagar produto</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
@@ -93,10 +93,10 @@
                                             
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                                             <a href="#" class="text-decoration-none">
                                             <a id="updateThisURL" href="{% url 'products:products_delete' p.id %}" class="text-decoration-none">
-                                                <button  type="button"  class="btn btn-danger">Delete</button>
+                                                <button  type="button"  class="btn btn-danger">Apagar</button>
                                             </a>
                                         </div>
                                     </div>
@@ -138,8 +138,8 @@
             buttons: [
                 {
                 extend: 'print',
-                text: 'Print <i class="fas fa-file ml-2"></i>',
-                titleAttr: 'Print',
+                text: 'Imprimir <i class="fas fa-file ml-2"></i>',
+                titleAttr: 'Imprimir',
                 className: 'btn btn-info',
                 exportOptions: {
                     columns: [ 0, 1, 2, 3 ,4 ]
@@ -147,8 +147,8 @@
                 },
                 {
                     extend: 'excelHtml5',
-                    text: 'Download Excel <i class="fas fa-file-excel ml-2"></i>',
-                    titleAttr: 'Download Excel',
+                    text: 'Baixar Excel <i class="fas fa-file-excel ml-2"></i>',
+                    titleAttr: 'Baixar Excel',
                     className: 'btn btn-success ml-2',
                     exportOptions: {
                         columns: [ 0, 1, 2, 3 ,4 ]
@@ -156,8 +156,8 @@
                 },
                 {
                     extend: 'pdfHtml5',
-                    text: 'Download PDF <i class="fas fa-file-pdf ml-2"></i>',
-                    titleAttr: 'Download PDF',
+                    text: 'Baixar PDF <i class="fas fa-file-pdf ml-2"></i>',
+                    titleAttr: 'Baixar PDF',
                     className: 'btn btn-danger ml-2',
                     download: 'open',
                     orientation: 'vertical',
@@ -239,7 +239,7 @@ $('#dataTable tbody')
     product_id = row_data[0];
     product_name = row_data[2]
     new_delete_url  = 'delete/' + product_id;
-    document.getElementById("updateThisText").innerHTML = "Are you sure you want to delete the product:  " + product_name + "?";
+    document.getElementById("updateThisText").innerHTML = "Você tem certeza que deseja apagar esse produto:  " + product_name + "?";
     document.getElementById("updateThisURL").href=new_delete_url;
     });
 
