--- a/django_pos/templates/customers/customers.html
+++ b/django_pos/templates/customers/customers.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}Customers{% endblock title %}
+{% block title %}Clientes{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -11,7 +11,7 @@
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Customers{% endblock heading %}
+{% block heading %}Clientes{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
@@ -21,7 +21,7 @@
         <a href="{% url 'customers:customers_add' %}">
             <button type="button" class="btn btn-success font-weight-bold">
                     <i class="fas fa-plus mr-2"></i>
-                    Create new customer
+                    Criar novo cliente
             </button>
         </a>
     </div>
@@ -29,7 +29,7 @@
     <!-- DataTable -->
     <div class="card shadow mb-12">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Customers</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Clientes</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -38,11 +38,11 @@
                         <tr>
                             <th>ID</th>
                             <th style="width:5%">#</th>
-                            <th style="width:20%">Name</th>
+                            <th style="width:20%">Nome</th>
                             <th style="width:25%">Email</th>
-                            <th style="width:15%">Phone</th>
-                            <th style="width:25%">Adress</th>
-                            <th class="text-center" style="width:10%">Actions</th>
+                            <th style="width:15%">Telefone</th>
+                            <th style="width:25%">Endereço</th>
+                            <th class="text-center" style="width:10%">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -57,7 +57,7 @@
                             <td class="text-center">
                                 <!--Update-->
                                 <a href="{% url 'customers:customers_update' c.id %}" class="text-decoration-none">
-                                    <button type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Update customer">
+                                    <button type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Atualizar cliente">
                                         <i class="fas fa-pen"></i>
                                     </button>
                                 </a>
@@ -74,18 +74,18 @@
                                     <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Delete customer</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Apagar Cliente</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
                                         <div id="updateThisText" class="modal-body">
-                                            Are you sure you want to delete the customer: {{c.name}}
+                                            Você tem certeza que deseja apagar esse cliente: {{c.name}}
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                                             <a id="updateThisURL" href="{% url 'customers:customers_delete' c.id %}" class="text-decoration-none">
-                                                <button type="button"  class="btn btn-danger">Delete</button>
+                                                <button type="button"  class="btn btn-danger">Apagar</button>
                                             </a>
                                         </div>
                                     </div>
@@ -127,8 +127,8 @@
             buttons: [
                 {
                 extend: 'print',
-                text: 'Print <i class="fas fa-file ml-2"></i>',
-                titleAttr: 'Print',
+                text: 'Imprimir <i class="fas fa-file ml-2"></i>',
+                titleAttr: 'Imprimir',
                 className: 'btn btn-info',
                 exportOptions: {
                     columns: [ 0, 1, 2, 3 ,4 ]
@@ -136,8 +136,8 @@
                 },
                 {
                     extend: 'excelHtml5',
-                    text: 'Download Excel <i class="fas fa-file-excel ml-2"></i>',
-                    titleAttr: 'Download Excel',
+                    text: 'Baixar Excel <i class="fas fa-file-excel ml-2"></i>',
+                    titleAttr: 'Baixar Excel',
                     className: 'btn btn-success ml-2',
                     exportOptions: {
                         columns: [ 0, 1, 2, 3 ,4 ]
@@ -145,8 +145,8 @@
                 },
                 {
                     extend: 'pdfHtml5',
-                    text: 'Download PDF <i class="fas fa-file-pdf ml-2"></i>',
-                    titleAttr: 'Download PDF',
+                    text: 'Baixar PDF <i class="fas fa-file-pdf ml-2"></i>',
+                    titleAttr: 'Baixar PDF',
                     className: 'btn btn-danger ml-2',
                     download: 'open',
                     orientation: 'vertical',
@@ -228,7 +228,7 @@
     customer_id = row_data[0];
     customer_name = row_data[2]
     new_delete_url  = 'delete/' + customer_id;
-    document.getElementById("updateThisText").innerHTML = "Are you sure you want to delete the customer:  " + customer_name + "?";
+    document.getElementById("updateThisText").innerHTML = "Você tem certeza que deseja apagar esse cliente:  " + customer_name + "?";
     document.getElementById("updateThisURL").href=new_delete_url;
     });
 </script>
