--- a/django_pos/templates/pos/index.html
+++ b/django_pos/templates/pos/index.html
@@ -21,7 +21,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            Avg Earning per Month</div>
+                            Lucro Méd. Por Mês</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">{{avg_month}} $</div>
                     </div>
                     <div class="col-auto">
@@ -39,7 +39,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                            Earnings (Annual)</div>
+                            Lucros (Anuais)</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">{{annual_earnings}} $</div>
                     </div>
                     <div class="col-auto">
@@ -56,7 +56,7 @@
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Registered Products
+                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Produtos registrados
                         </div>
                         <div class="row no-gutters align-items-center">
                             <div class="col-auto">
@@ -78,7 +78,7 @@
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Registered Categories
+                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Categorias Registradas
                         </div>
                         <div class="row no-gutters align-items-center">
                             <div class="col-auto">
@@ -105,7 +105,7 @@
             <!-- Card Header - Dropdown -->
             <div
                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Year Earnings Overview</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Visão Geral de Lucros do Ano</h6>
             </div>
             <!-- Card Body -->
             <div class="card-body">
@@ -122,7 +122,7 @@
             <!-- Card Header - Dropdown -->
             <div
                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Best selling products</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Produtos mais vendidos</h6>
             </div>
             <!-- Card Body -->
             <div class="card-body">
