--- a/django_pos/templates/products/products_add.html
+++ b/django_pos/templates/products/products_add.html
@@ -1,22 +1,22 @@
 {% extends "pos/base.html" %}
 
 <!-- Page title  -->
-{% block title %}Add product{% endblock title %}
+{% block title %}Adicionar produto{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Add product{% endblock heading %}
+{% block heading %}Adicionar produto{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
-<!--Go back-->
+<!--Voltar-->
 <div class="row ml-0 mb-3">
     <a href="{% url 'products:products_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
-            Go back
+            Voltar
         </button>
     </a>
 </div>
@@ -28,11 +28,11 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputDescription">Name</label>
-                        <input type="text" class="form-control" name="name" placeholder="Chicken Breasts..." required>
+                        <label for="inputDescription">Nome</label>
+                        <input type="text" class="form-control" name="name" placeholder="Peito de Frango..." required>
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="state">State</label>
+                        <label for="state">Estado</label>
                         <select name="state" class="form-control" required>
                             {% for status in product_status %}
                             <option value="{{status.0}}">{{status.1}}</option>
@@ -43,13 +43,13 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputDescription">Description</label>
-                        <input type="text" name="description" class="form-control" placeholder="Freshness Guaranteed Chicken Breast, 2.25 - 3.2 lb..." required>
+                        <label for="inputDescription">Descrição</label>
+                        <input type="text" name="description" class="form-control" placeholder="Peito de Frango Resfriado..." required>
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="category">Category</label>
+                        <label for="category">Categoria</label>
                         <select name="category" class="form-control" required>
-                            <option value="" selected disabled hidden>Select the category</option>
+                            <option value="" selected disabled hidden>Selecione a categoria</option>
                             {% for category in categories %}
                             <option value="{{category.id}}">{{category.name}}</option>
                             {% endfor %}
@@ -59,13 +59,13 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputPrice">Price</label>
+                        <label for="inputPrice">Preço</label>
                         <input type="number" name="price" step="any"  class="form-control" placeholder="10.99" required>
                     </div>
                 </div>
                 
 
-                <button type="submit" class="btn btn-success font-weight-bold">Create product</button>
+                <button type="submit" class="btn btn-success font-weight-bold">Criar produto</button>
                
             </form>
         </div>
