--- a/django_pos/templates/products/products_update.html
+++ b/django_pos/templates/products/products_update.html
@@ -1,22 +1,22 @@
 {% extends "pos/base.html" %}
 
 <!-- Page title  -->
-{% block title %}Update product{% endblock title %}
+{% block title %}Atualizar produto{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Update product{% endblock heading %}
+{% block heading %}Atualizar produto{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
-<!--Go back-->
+<!--Voltar-->
 <div class="row ml-0 mb-3">
     <a href="{% url 'products:products_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
-            Go back
+            Voltar
         </button>
     </a>
 </div>
@@ -28,7 +28,7 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputDescription">Name</label>
+                        <label for="inputDescription">Nome</label>
                         <input type="text" class="form-control" name="name" value="{{product.name}}" required>
                     </div>
                     <div class="form-group col-md-4">
@@ -47,13 +47,13 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputDescription">Description</label>
+                        <label for="inputDescription">Descrição</label>
                         <input type="text" name="description" class="form-control" value="{{product.description}}" required>
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="category">Category</label>
+                        <label for="category">Categoria</label>
                         <select name="category" class="form-control" required>
-                            <option value="" selected disabled hidden>Select the category</option>
+                            <option value="" selected disabled hidden>Selecione a categoria</option>
                             {% for category in categories %}
                                 {% if product.category.id == category.id%}
                                 <option value="{{category.id}}" selected>{{category.name}}</option>
@@ -67,13 +67,13 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-8">
-                        <label for="inputPrice">Price</label>
+                        <label for="inputPrice">Preço</label>
                         <input type="number" name="price" step="any"  class="form-control" value="{{product.price}}"  required>
                     </div>
                 </div>
                 
 
-                <button type="submit" class="btn btn-success font-weight-bold">Update product</button>
+                <button type="submit" class="btn btn-success font-weight-bold">Atualizar produto</button>
                
             </form>
         </div>
