--- a/django_pos/templates/sales/sales_details.html
+++ b/django_pos/templates/sales/sales_details.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}Sale details{% endblock title %}
+{% block title %}Detalhes da venda{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -15,16 +15,16 @@
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Sale ID: {{sale.id}}, details{% endblock heading %}
+{% block heading %}ID de venda: {{sale.id}}, detalhes{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
-<!--Go back-->
+<!--Voltar-->
 <div class="row ml-0 mb-3">
     <a href="{% url 'sales:sales_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
-            Go back
+            Voltar
         </button>
     </a>
 </div>
@@ -38,7 +38,7 @@
                     <!--Left column-->
                     <div class="col-md-9 pl-0">
                         <div class="card card-secondary">
-                            <div class="card-header">Sale products</div>
+                            <div class="card-header">Venda de produtos</div>
                             
                             <div class="card-body">
                                 <!--Products table-->
@@ -47,9 +47,9 @@
                                         <thead>
                                             <tr>
                                                 <th>#</th>
-                                                <th>Name</th>
-                                                <th>Price</th>
-                                                <th>Quantity</th>
+                                                <th>Nome</th>
+                                                <th>Preço</th>
+                                                <th>Quantidade</th>
                                                 <th>Total</th>
                                                 </tr>
                                             </thead>
@@ -75,11 +75,11 @@
                     <!--Righ column-->
                     <div class="col-md-3 pr-0">
                         <div class="card card-secondary">
-                            <div class="card-header">Sale details</div>
+                            <div class="card-header">Detalhes da venda</div>
                             <div class="card-body">
                                 {% csrf_token %}
                                 <div class="form-group">
-                                    <label for="customer">Customer</label>
+                                    <label for="customer">Cliente</label>
                                     <select name="customer" class="form-control" id="searchbox_customers" disabled readonly>
                                         <option value="{{sale.customer.id}}">{{sale.customer.get_full_name}}</option>
                                     </select>
@@ -90,25 +90,25 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Tax Inclusive (%)</label>
+                                    <label>Taxa Incluída (%)</label>
                                     <div class="input-group">
                                         <input name="tax_percentage" class="form-control" value="{{sale.tax_percentage}}" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Tax Amount</label>
+                                    <label>Valor da Taxa</label>
                                     <div class="input-group">
                                         <input name="tax_amount" class="form-control" value="{{sale.tax_amount}}" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Grand Total</label>
+                                    <label>Total Geral</label>
                                     <div class="input-group">
                                         <input name="grand_total" class="form-control" value="{{sale.grand_total}}" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Amount payed</label>
+                                    <label>Valor pago</label>
                                     <div class="input-group">
                                         <input name="amount_payed" class="form-control" value="{{sale.amount_payed}}" readonly>
                                     </div>
