--- a/django_pos/templates/sales/sales_receipt_pdf.html
+++ b/django_pos/templates/sales/sales_receipt_pdf.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sale Receipt PDF</title>
+    <title>Recibo de Venda PDF</title>
     <style>
 
         * {
@@ -56,12 +56,12 @@
             <p class="name-company"><b>E-Corp</b></p>
             <p><b>135 East 57th Street</b></p>
             <p><b>New York, NY 10011, USA</b></p>
-            <p><b>Phone:</b> (213) 484-6829</p>
+            <p><b>Telefone:</b> (213) 484-6829</p>
         </div>
         <div class="col-6 border-left border-dark">
-            <p><b>Date:</b> {{sale.date_added}}</p>
-            <p><b>Sale ID:</b> {{sale.id}}</p>
-            <p><b>Customer:</b> {{sale.customer.get_full_name}}</p>
+            <p><b>Data:</b> {{sale.date_added}}</p>
+            <p><b>ID de Venda:</b> {{sale.id}}</p>
+            <p><b>Cliente:</b> {{sale.customer.get_full_name}}</p>
         </div>
     </div>
 
@@ -72,9 +72,9 @@
         <thead>
         <tr style="border: 1px solid black;">
             <th style="width: 5%;" class="text-center">#</th>
-            <th style="width: 40%;" class="text-left pl-2">Product</th>
-            <th style="width: 5%;" class="text-center">Quantity</th>
-            <th style="width: 20%;" class="text-right pr-2">Price</th>
+            <th style="width: 40%;" class="text-left pl-2">Produto</th>
+            <th style="width: 5%;" class="text-center">Quantidade</th>
+            <th style="width: 20%;" class="text-right pr-2">Preço</th>
             <th style="width: 20%;" class="text-right pr-2">Total</th>
         </tr>
         </thead>
@@ -93,25 +93,25 @@
             <td class="text-right pr-2">{{sale.sub_total|floatformat:2}} $</td>
         </tr>
         <tr>
-            <td colspan="4" class="text-right pr-2"><b>Tax Inclusive ({{sale.tax_percentage}}%)</b></td>
+            <td colspan="4" class="text-right pr-2"><b>Taxa Incluída ({{sale.tax_percentage}}%)</b></td>
             <td class="text-right pr-2">{{sale.tax_amount|floatformat:2}} $</td>
         </tr>
         <tr>
-            <td colspan="4" class="text-right pr-2"><b>Grand Total</b></td>
+            <td colspan="4" class="text-right pr-2"><b>Total Geral</b></td>
             <td class="text-right pr-2">{{ sale.grand_total }} $</td>
         </tr>
         <tr>
-            <td colspan="4" class="text-right pr-2"><b>Amount payed</b></td>
+            <td colspan="4" class="text-right pr-2"><b>Valor pago</b></td>
             <td class="text-right pr-2">{{ sale.amount_payed }} $</td>
         </tr>
         <tr>
-            <td colspan="4" class="text-right pr-2"><b>Change</b></td>
+            <td colspan="4" class="text-right pr-2"><b>Mudança</b></td>
             <td class="text-right pr-2">{{ sale.amount_change }} $</td>
         </tr>
         <tr>
             <td colspan="5">
                 <p class="text-uppercase font-weight-bold text-center">
-                    Thank you for your preference!
+                    Obrigado pela sua preferência!
                 </p>
             </td>
         </tr>
